--- a/theAreanaSim/simulation.html
+++ b/theAreanaSim/simulation.html
@@ -237,8 +237,7 @@
         <section id="setupScreen" class="panel">
             <h1>Arena Simulator</h1>
             <p>
-                First, pick how many tributes you want and jot down their names. After that it’s simply a matter
-                of pressing “Next” to watch the carnage unfold day by day.
+                First, pick how many tributes you want and enter their names. Press next to begin the games.
             </p>
 
             <form id="setupForm" class="form-grid">
