--- a/theAreanaSim/simulation.html
+++ b/theAreanaSim/simulation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arena Simulation</title>
+    <title>Hunger Games Simulator</title>
     <link rel="stylesheet" href="../styles.css" />
     <style>
         :root {
@@ -235,7 +235,7 @@
 <body>
     <main class="arena-container">
         <section id="setupScreen" class="panel">
-            <h1>Arena Simulator</h1>
+            <h1>Hunger Games Simulator</h1>
             <p>
                 First, pick how many tributes you want and enter their names. Press next to begin the games.
             </p>
@@ -370,10 +370,10 @@
             };
 
             const DEFAULT_NAMES = [
-                "Alice", "Bob", "Charlie", "Diana", "Evelyn", "Frank",
-                "George", "Hannah", "Isaac", "Juno", "Kai", "Lena",
-                "Milo", "Nora", "Omar", "Piper", "Quinn", "Rhea",
-                "Silas", "Tess", "Uri", "Vera", "Wade", "Yara"
+                "Will", "Alex", "Ty", "Eli", "Ethan", "Katrine",
+                "Emily", "Noelle", "Kelly", "Chad", "CJ", "Raechel",
+                "Hannah", "Camille", "Bryce", "Andy", "Anna", "Landon",
+                "Kya", "Lars", "Sara", "Aubrey", "Katie", "Daniel"
             ];
 
             const setupScreen = document.getElementById("setupScreen");
