--- a/theAreanaSim/simulation.html
+++ b/theAreanaSim/simulation.html
@@ -289,6 +289,8 @@
                 inventory_event_chance: 0.45,
                 loot_event_chance: 0.2,
                 special_item_event_chance: 0.4,
+                target_min_days: 7,
+                target_max_days: 12,
                 min_events_per_day: 1,
                 max_events_per_day: 8,
                 bloodbath_event_range: [6, 9],
@@ -697,6 +699,7 @@
                 }));
 
                 const total = tributes.length;
+                const desiredDays = determineDesiredDays(total, config);
                 const days = [];
                 let dayCounter = 0;
                 const specialItemMap = buildSpecialItemMap(config);
@@ -707,13 +710,28 @@
                     dayCounter += 1;
                     const events = [];
                     const fallen = [];
-                    const target = eventsForDay(dayCounter, alive().length, total, config);
+                    const livingCount = alive().length;
+                    const target = eventsForDay(dayCounter, livingCount, total, config, desiredDays);
+                    const deathPressure = computeDeathPressure(
+                        livingCount,
+                        dayCounter,
+                        target,
+                        config,
+                        desiredDays
+                    );
 
                     for (let i = 0; i < target; i += 1) {
                         const living = alive();
                         if (!living.length) break;
                         const actor = pickRandom(living);
-                        const event = generateEvent(actor, tributes, config, dayCounter, specialItemMap);
+                        const event = generateEvent(
+                            actor,
+                            tributes,
+                            config,
+                            dayCounter,
+                            specialItemMap,
+                            deathPressure
+                        );
                         if (!event) continue;
                         events.push(event);
                         if (event.type === "lethal" || event.type === "item-special lethal") {
@@ -754,7 +772,7 @@
                 return { tributes, days, winner: winner ? winner.name : null };
             }
 
-            function eventsForDay(dayNumber, aliveCount, total, config) {
+            function eventsForDay(dayNumber, aliveCount, total, config, desiredDays) {
                 if (dayNumber === 1 && Array.isArray(config.bloodbath_event_range)) {
                     const range = config.bloodbath_event_range.slice(0, 2);
                     const low = Math.max(config.min_events_per_day, Math.floor(range[0] ?? config.max_events_per_day));
@@ -766,15 +784,23 @@
                 const density = total ? aliveCount / total : 0;
                 const base = (config.min_events_per_day ?? 2) + Math.max(0, Math.round(span * density));
                 const jitter = span ? pickRandom([-1, 0, 0, 1]) : 0;
-                const target = base + jitter;
+                let target = base + jitter;
+                const killPressureEvents = requiredEventsForProgress(
+                    dayNumber,
+                    aliveCount,
+                    desiredDays,
+                    config
+                );
+                target = Math.max(target, killPressureEvents);
+                const softCap = Math.max(Math.min(8, aliveCount), killPressureEvents);
                 return clamp(
-                    target,
+                    Math.min(target, aliveCount, softCap),
                     config.min_events_per_day ?? 2,
-                    config.max_events_per_day ?? Math.max(2, target)
+                    Math.max(softCap, config.max_events_per_day ?? Math.max(2, target))
                 );
             }
 
-            function generateEvent(actor, tributes, config, dayNumber, specialItemMap) {
+            function generateEvent(actor, tributes, config, dayNumber, specialItemMap, deathPressure) {
                 const living = tributes.filter((t) => t.alive);
                 const canAttemptLethal = living.length > 1;
 
@@ -874,6 +900,7 @@
                 if (dayNumber === 1) {
                     lethalChance = Math.min(1, lethalChance + (config.bloodbath_lethal_bonus ?? 0.25));
                 }
+                lethalChance = clamp(lethalChance * deathPressure, 0.05, 0.95);
 
                 const lethalPool =
                     config.lethal_events && config.lethal_events.length
@@ -976,6 +1003,49 @@
                     };
                 });
                 return map;
+            }
+
+            function determineDesiredDays(total, config) {
+                const minDays = Math.max(1, config.target_min_days ?? 7);
+                const maxDays = Math.max(minDays, config.target_max_days ?? 12);
+                if (total <= 1 || minDays === maxDays) {
+                    return minDays;
+                }
+                const ratio = clamp((total - 2) / 22, 0, 1);
+                const span = maxDays - minDays;
+                return Math.round(minDays + span * ratio);
+            }
+
+            function requiredEventsForProgress(dayNumber, aliveCount, desiredDays, config) {
+                if (aliveCount <= 1) {
+                    return 0;
+                }
+                const remainingDays = Math.max(1, desiredDays - (dayNumber - 1));
+                const neededEliminations = Math.max(0, aliveCount - 1);
+                const targetKills = Math.max(1, Math.ceil(neededEliminations / remainingDays));
+                let baseChance = config.lethal_event_chance ?? 0.55;
+                if (dayNumber === 1) {
+                    baseChance = Math.min(1, baseChance + (config.bloodbath_lethal_bonus ?? 0.25));
+                }
+                const effectiveChance = clamp(baseChance, 0.1, 0.95);
+                return Math.ceil(targetKills / effectiveChance);
+            }
+
+            function computeDeathPressure(aliveCount, dayNumber, dailyEvents, config, desiredDays) {
+                if (aliveCount <= 1 || dailyEvents <= 0) {
+                    return 1;
+                }
+                const remainingDays = Math.max(1, desiredDays - (dayNumber - 1));
+                const neededEliminations = Math.max(0, aliveCount - 1);
+                const targetKills = neededEliminations / remainingDays;
+                let baseChance = config.lethal_event_chance ?? 0.55;
+                if (dayNumber === 1) {
+                    baseChance = Math.min(1, baseChance + (config.bloodbath_lethal_bonus ?? 0.25));
+                }
+                const expectedKills = dailyEvents * clamp(baseChance, 0.05, 0.95);
+                const pressure = targetKills / Math.max(expectedKills, 0.1);
+                const lateGameBonus = 1 + Math.max(0, dayNumber - 10) * 0.5;
+                return clamp(pressure * lateGameBonus, 0.6, 4);
             }
 
             function extractPlaceholders(template) {
