--- a/theAreanaSim/simulation.html
+++ b/theAreanaSim/simulation.html
@@ -153,25 +153,53 @@
             background: #ff6b6b;
             box-shadow: 0 0 10px rgba(255, 107, 107, 0.6);
         }
+        .event-line.lethal {
+            color: #ff9a9a;
+        }
 
         .event-line.inventory .event-dot {
             background: #5dfdcb;
             box-shadow: 0 0 10px rgba(93, 253, 203, 0.6);
+        }
+        .event-line.inventory {
+            color: #a3ffea;
         }
 
         .event-line.loot .event-dot {
             background: #73ff87;
             box-shadow: 0 0 10px rgba(115, 255, 135, 0.6);
         }
+        .event-line.loot {
+            color: #c0ffcb;
+        }
 
         .event-line.item-special .event-dot {
             background: #ffd166;
             box-shadow: 0 0 10px rgba(255, 209, 102, 0.6);
         }
+        .event-line.item-special {
+            color: #ffe3a8;
+        }
+        .event-line.item-special.lethal {
+            color: #ff9a9a;
+        }
 
         .event-line.victory .event-dot {
             background: #f4f48b;
             box-shadow: 0 0 10px rgba(244, 244, 139, 0.6);
+        }
+        .event-line.victory {
+            color: #fef7b7;
+            font-weight: 600;
+        }
+
+        .event-line.non-lethal {
+            color: #b9ceff;
+        }
+
+        .event-line.item-special.lethal .event-dot {
+            background: #ff6b6b;
+            box-shadow: 0 0 10px rgba(255, 107, 107, 0.6);
         }
 
         .summary-block {
