--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="projects.html">Projects</a></li>
         <li><a href="index.html#contact">Contact</a></li>
         <li><a href="learnPython.html">Lessons</a></li>
-        <li><a href="theAreanaSim/simulation.html">Hunger Games</a></li>
+        <li><a href="https://willcook.org/hungergames">Hunger Games</a></li>
       </ul>
     </nav>
   </header>
